--- a/sources/Device/CMakeLists.txt
+++ b/sources/Device/CMakeLists.txt
@@ -1,43 +1,44 @@
 # (c) Aleksandr Shevchenko e-mail : Sasha7b9@tut.by
 project (Device)
 
-
 set(CMAKE_UNITY_BUILD OFF)
 
-
-include_directories(../common/_VS_KEIL
-                    ../common/_VS_KEIL/CMSIS
-                    ../common/_VS_KEIL/std_includes
-                    src
-                    ..
-                    ../common/libs/STM32Cube_F4/Drivers/CMSIS/Device/ST/STM32F4xx/Include
-                    ../common/libs/STM32Cube_F4/Drivers/CMSIS/Include
-                    ../common/libs/STM32Cube_F4/Middlewares/ST/STM32_USB_Device_Library/Core/Inc
-                    ../Device/src/Hardware/USBD
-                    ../common/libs/STM32Cube_F4/Drivers/STM32F4xx_HAL_Driver/Inc
-                    ../Device/src/Hardware/HAL
-                    ../common/libs/STM32Cube_F4/Middlewares/Third_Party/FatFS/src
-                    ../common/libs/STM32Cube_F4/Middlewares/ST/STM32_USB_Host_Library/Core/Inc
-                    ../Device/src/Hardware/USBH
-                    ../common/libs/STM32Cube_F4/Middlewares/ST/STM32_USB_Host_Library/Class/MSC/Inc
-                    ../common/libs/STM32Cube_F4/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc
-                    ../Device/src/Hardware/FatFS
-                    )
+include_directories(
+    ../common/_VS_KEIL
+    ../common/_VS_KEIL/CMSIS
+    ../common/_VS_KEIL/std_includes
+    src
+    ..
+    ../common/libs/STM32Cube_F4/Drivers/CMSIS/Device/ST/STM32F4xx/Include
+    ../common/libs/STM32Cube_F4/Drivers/CMSIS/Include
+    ../common/libs/STM32Cube_F4/Middlewares/ST/STM32_USB_Device_Library/Core/Inc
+    ../Device/src/Hardware/USBD
+    ../common/libs/STM32Cube_F4/Drivers/STM32F4xx_HAL_Driver/Inc
+    ../Device/src/Hardware/HAL
+    ../common/libs/STM32Cube_F4/Middlewares/Third_Party/FatFS/src
+    ../common/libs/STM32Cube_F4/Middlewares/ST/STM32_USB_Host_Library/Core/Inc
+    ../Device/src/Hardware/USBH
+    ../common/libs/STM32Cube_F4/Middlewares/ST/STM32_USB_Host_Library/Class/MSC/Inc
+    ../common/libs/STM32Cube_F4/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc
+    ../Device/src/Hardware/FatFS
+)
 
 add_definitions(-DSTM32F407xx)
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -MP -Wall")
 
-add_compile_options(/wd4201)
-add_compile_options(/wd4514)
-add_compile_options(/wd4623)
-add_compile_options(/wd4626)
-add_compile_options(/wd4820)
-add_compile_options(/wd5027)
-add_compile_options(/wd5039)
-add_compile_options(/wd5045)
-add_compile_options(/wd5220)    # a non-static data member with a volatile qualified type no longer implies
-add_compile_options(/wd5246)
+add_compile_options(
+    /wd4201
+    /wd4514
+    /wd4623
+    /wd4626
+    /wd4820
+    /wd5027
+    /wd5039
+    /wd5045
+    /wd5220    # a non-static data member with a volatile qualified type no longer implies
+    /wd5246
+)
 
 file(GLOB LIBS_FATFS     ../common/libs/STM32Cube_F4/Middlewares/Third_Party/FatFS/src/ff_gen_drv.*
                          ../common/libs/STM32Cube_F4/Middlewares/Third_Party/FatFS/src/ff.*
@@ -146,23 +147,24 @@ source_group(Interface       FILES ${INTERFACE})
 source_group(Settings        FILES ${SETTINGS})
 source_group(Utils           FILES ${UTILS})
 
-add_library(${PROJECT_NAME} ${LIBS_FATFS}
-                            ${LIBS_HAL}
-                            ${LIBS_USBD}
-                            ${LIBS_USBH}
-                            ${HARDWARE}
-                            ${HARDWARE_CMSIS}
-                            ${HARDWARE_FATFS}
-                            ${HARDWARE_HAL}
-                            ${HARDWARE_USBD}
-                            ${HARDWARE_USBH}
-                            ${SRC}
-                            ${COMMON}
-                            ${FDRIVE}
-                            ${FREQMETER}
-                            ${GENERATOR}
-                            ${GENERATOR_FPGA}
-                            ${INTERFACE}
-                            ${SETTINGS}
-                            ${UTILS}
+add_library(${PROJECT_NAME}
+    ${LIBS_FATFS}
+    ${LIBS_HAL}
+    ${LIBS_USBD}
+    ${LIBS_USBH}
+    ${HARDWARE}
+    ${HARDWARE_CMSIS}
+    ${HARDWARE_FATFS}
+    ${HARDWARE_HAL}
+    ${HARDWARE_USBD}
+    ${HARDWARE_USBH}
+    ${SRC}
+    ${COMMON}
+    ${FDRIVE}
+    ${FREQMETER}
+    ${GENERATOR}
+    ${GENERATOR_FPGA}
+    ${INTERFACE}
+    ${SETTINGS}
+    ${UTILS}
 )
