--- a/sources/Device/CMakeLists.txt
+++ b/sources/Device/CMakeLists.txt
@@ -1,7 +1,7 @@
 # (c) Aleksandr Shevchenko e-mail : Sasha7b9@tut.by
 project (Device)
 
-set(CMAKE_UNITY_BUILD OFF)
+#set(CMAKE_UNITY_BUILD OFF)
 
 include_directories(
     ../Common/_VS_KEIL
