--- a/sources/Device/Device.uvprojx
+++ b/sources/Device/Device.uvprojx
@@ -1059,24 +1059,14 @@
               <FilePath>.\src\structs.h</FilePath>
             </File>
             <File>
-              <FileName>main_d.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\main_d.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>Log.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Log.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>Log.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Log.h</FilePath>
-            </File>
-            <File>
               <FileName>defines_com.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\Common\defines_com.h</FilePath>
+            </File>
+            <File>
+              <FileName>main.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\main.cpp</FilePath>
             </File>
           </Files>
         </Group>
@@ -1142,6 +1132,16 @@
               <FileName>StringUtils.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\Utils\StringUtils.h</FilePath>
+            </File>
+            <File>
+              <FileName>Log.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Utils\Log.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Log.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Utils\Log.h</FilePath>
             </File>
           </Files>
         </Group>
