--- a/sources/Device/Device.uvprojx
+++ b/sources/Device/Device.uvprojx
@@ -1013,6 +1013,86 @@
               <FileType>5</FileType>
               <FilePath>.\src\Device\FPGA.h</FilePath>
             </File>
+            <File>
+              <FileName>Base.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\Base.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Base.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Device\Base.h</FilePath>
+            </File>
+            <File>
+              <FileName>MeasCurrent.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\MeasCurrent.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>MeasCurrent.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Device\MeasCurrent.h</FilePath>
+            </File>
+            <File>
+              <FileName>PCM.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\PCM.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>PCM.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Device\PCM.h</FilePath>
+            </File>
+            <File>
+              <FileName>ScanFormer.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\ScanFormer.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>ScanFormer.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Device\ScanFormer.h</FilePath>
+            </File>
+            <File>
+              <FileName>Source3kV.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\Source3kV.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Source3kV.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Device\Source3kV.h</FilePath>
+            </File>
+            <File>
+              <FileName>Source50V.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\Source50V.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Source50V.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Device\Source50V.h</FilePath>
+            </File>
+            <File>
+              <FileName>Substrate.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\Substrate.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Substrate.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Device\Substrate.h</FilePath>
+            </File>
+            <File>
+              <FileName>Switch.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\Switch.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Switch.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Device\Switch.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -2168,6 +2248,86 @@
               <FileName>FPGA.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\Device\FPGA.h</FilePath>
+            </File>
+            <File>
+              <FileName>Base.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\Base.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Base.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Device\Base.h</FilePath>
+            </File>
+            <File>
+              <FileName>MeasCurrent.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\MeasCurrent.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>MeasCurrent.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Device\MeasCurrent.h</FilePath>
+            </File>
+            <File>
+              <FileName>PCM.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\PCM.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>PCM.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Device\PCM.h</FilePath>
+            </File>
+            <File>
+              <FileName>ScanFormer.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\ScanFormer.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>ScanFormer.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Device\ScanFormer.h</FilePath>
+            </File>
+            <File>
+              <FileName>Source3kV.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\Source3kV.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Source3kV.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Device\Source3kV.h</FilePath>
+            </File>
+            <File>
+              <FileName>Source50V.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\Source50V.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Source50V.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Device\Source50V.h</FilePath>
+            </File>
+            <File>
+              <FileName>Substrate.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\Substrate.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Substrate.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Device\Substrate.h</FilePath>
+            </File>
+            <File>
+              <FileName>Switch.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device\Switch.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Switch.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Device\Switch.h</FilePath>
             </File>
           </Files>
         </Group>
