--- a/sources/Device/Device.uvprojx
+++ b/sources/Device/Device.uvprojx
@@ -1184,16 +1184,6 @@
           <GroupName>Utils</GroupName>
           <Files>
             <File>
-              <FileName>Buffer.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Utils\Buffer.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>Buffer.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Utils\Buffer.h</FilePath>
-            </File>
-            <File>
               <FileName>Debug.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\Utils\Debug.cpp</FilePath>
@@ -1252,6 +1242,16 @@
               <FileName>RingBuffer.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\Utils\RingBuffer.h</FilePath>
+            </File>
+            <File>
+              <FileName>BufferOSDP.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Utils\BufferOSDP.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>BufferOSDP.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Utils\BufferOSDP.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -2435,16 +2435,6 @@
           <GroupName>Utils</GroupName>
           <Files>
             <File>
-              <FileName>Buffer.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Utils\Buffer.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>Buffer.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Utils\Buffer.h</FilePath>
-            </File>
-            <File>
               <FileName>Debug.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\Utils\Debug.cpp</FilePath>
@@ -2503,6 +2493,16 @@
               <FileName>RingBuffer.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\Utils\RingBuffer.h</FilePath>
+            </File>
+            <File>
+              <FileName>BufferOSDP.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Utils\BufferOSDP.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>BufferOSDP.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Utils\BufferOSDP.h</FilePath>
             </File>
           </Files>
         </Group>
